--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/944c8fd8b4.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
@@ -26,13 +27,7 @@
           <div>Done</div>
         </div>
         <div id="task-board">
-          <div class="task">
-            <div>집가기</div>
-            <div>
-              <button>Check</button>
-              <button>Delete</button>
-            </div>
-          </div>
+          
         </div>
       </section>
     </div>
