--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <section class="task-area">
         <div class="task-tabs">
           <div id="under-line"></div>
-          <div>All</div>
-          <div>Not Done</div>
-          <div>Done</div>
+          <div id="all">All</div>
+          <div id="ongoing">Not Done</div>
+          <div id="done">Done</div>
         </div>
         <div id="task-board">
           
