--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   <body>
     <div class="container">
       <h1>Todo List</h1>
+      <p class="caption">오늘 할 일은 오늘 하자!</p>
       <section class="input-area">
-        <input type="text" id="task-input" />
-        <button id="add-button">+</button>
+        <input type="text" id="task-input" placeholder="할 일을 입력해주세요" />
+        <button id="add-button"><i class="fa-regular fa-square-plus"></i></button>
       </section>
 
       <section class="task-area">
@@ -30,7 +31,11 @@
           
         </div>
       </section>
+
+      
+
     </div>
+    <footer>© 2024 Woohyuk Byun. All rights reserved.</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
