--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
       <section class="task-area">
         <div class="task-tabs">
           <div id="under-line"></div>
-          <div id="all">All</div>
-          <div id="ongoing">Not Done</div>
-          <div id="done">Done</div>
+          <div id="all">
+            All
+          </div>
+          <div id="ongoing">
+            Not Done
+          </div>
+          <div id="done">
+            Done
+          </div>
         </div>
         <div id="task-board">
           
